# django-mqueue-livefeed

./: .gitignore  MANIFEST.in  Makefile  README.md  index.html  package.json  requirements.txt  setup.cfg  setup.py  tailwind.config.js  tsconfig.json  vite.config.js
backend/backend/: settings.py  urls.py  views.py
backend/mqueue_livefeed/: admin.py  apps.py  conf.py  models.py
backend/mqueue_livefeed/migrations/: 0001_initial.py
backend/static/assets/: index-5557b434.css  index-aad159e0.css  index.js  vendor-645c40f2.js  vendor-b4edf9d1.js
backend/templates/: index.html  login_form.html
frontend/: App.vue  components.d.ts  index.html  package.json  sparkline.js  state.ts  vite.config.ts  ws.ts
frontend/components/: SparklineChart.vue  StatusBar.vue
frontend/models/: events_queue.ts
frontend/src/: App.vue  const.ts  state.ts  ws.ts
frontend/src/components/: EventBadge.vue  SiteQueue.vue
frontend/src/models/: events_queue.ts  site.ts
livefeed/: __init__.py  apps.py  models.py  urls.py  views.py
livefeed/management/commands/: feed_mq.py  init_db.py  install.py
livefeed/migrations/: 0001_initial.py
livefeed/templates/: base.html  index.html  livefeed.html  login_form.html
livefeed/templates/app/: index.html
mqueue_livefeed/: __init__.py  admin.py  conf.py  urls.py  views.py
mqueue_livefeed/management/commands/: feed_mq.py
mqueue_livefeed/templates/mql/: base.html  index.html  status.html
mqueue_livefeed/templatetags/: mql.py
sandbox/: urls.py
sandbox/settings/: base.py  demo.py  tests.py
tests/: conftest.py  utils.py
(+12 files in other folders)
