;;
;; livefeed package
;;
[metadata]
name = livefeed
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0

[options]
include_package_data = True
install_requires =
    Django>=3.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
    black
    django-extensions
    django-browser-reload
    django-tailwind
    django-instant
    django-mqueue
    django-cors-headers

[options.packages.find]
where = .
exclude=
    data
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{36,37,38}-django{22,30,31,40}

[testenv]

deps =
    django22: Django>=2.2,<2.3
    django30: Django>=3.0,<3.1
    django31: Django>=3.1,<3.2
    django40: Django>=4.0

commands =
    pip install -e .[dev]
    pytest -vv tests
